# agentguard

./: .gitignore  .npmignore  ARCHITECTURE.md  Anchor.toml  CONTRIBUTING.md  Cargo.toml  DEMO-SCRIPT.md  LICENSE  README.md  SECURITY.md  demo-output.txt  demo.cast  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
coverage/: coverage-summary.json
demo-video/: record-demo.sh
examples/: agentdex-integration.ts  attack-demo.ts  conversational-agent.ts  demo.ts  interactive-demo.ts  onchain-audit-demo.ts  quick-demo.js  quick-demo.mjs  quickstart.ts  showcase.ts  timed-demo.ts  trading-agent.ts  video-demo.ts
programs/agentguard-audit/: Cargo.toml
programs/agentguard-audit/src/: lib.rs
scripts/: postinstall.js
src/: guard.ts  index.ts
src/audit/: index.ts  onchain.ts
src/firewall/: allowlist.ts  index.ts  limits.ts  simulator.ts
src/isolator/: index.ts
src/sanitizer/: index.ts  patterns.ts
src/wrapper/: index.ts
tests/: audit.test.ts  benchmark.test.ts  cleaner.test.ts  e2e-devnet.test.ts  firewall.test.ts  guard.test.ts  integration.test.ts  isolator.test.ts  limits.test.ts  onchain.test.ts  sanitizer.test.ts  simulator.test.ts  wrapper.test.ts
