[package]
name = "agentguard-audit"
version = "0.1.0"
description = "On-chain audit trail for AgentGuard security events"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agentguard_audit"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
blake3 = "=1.5.5"
constant_time_eq = "=0.3.1"
